# SiteSketch

./: .gitignore  CMakeLists.txt  README.md
data/: obstacles.csv  site.csv
include/: CsvParser.h  DxfWriter.h  Geometry.h  LayoutEngine.h  ReportWriter.h  Site.h  Warning.h
output/: layout.dxf  summary.csv
src/: CsvParser.cpp  DxfWriter.cpp  Geometry.cpp  LayoutEngine.cpp  ReportWriter.cpp  Site.cpp  main.cpp
tests/: CMakeLists.txt  test_csv_parser.cpp  test_dxf_writer.cpp  test_geometry.cpp  test_layout_engine.cpp  test_report_writer.cpp
